--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ GOOGLE_API_KEY=your_gemini_api_key_here
 
 # Optional:
 GOOGLE_GEMINI_MODEL=gemini-2.5-flash
+ENABLE_JSON_UI=false
 # NODE_ENV=development
 # NEXT_PUBLIC_APP_URL=http://localhost:3000
